Vortrag2/skaffold-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skaffold-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skaffold-demo
  template:
    metadata:
      labels:
        app: skaffold-demo
    spec:
      containers:
        - name: skaffold-demo
          image: ghcr.io/ProfessorSchuster/skaffold-demo:latest
          ports:
            - containerPort: 80
