Vortrag2/skaffold-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skaffold-demo
spec:
  selector:
    app: skaffold-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
